feat(CS): EC key support for global configuration
it works

Refs: XRDDEV-2695